# signal_track

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.codex/skills/signal-track/: SKILL.md
.codex/skills/signal-track/agents/: openai.yaml
.codex/skills/signal-track/references/: tracking-workflow.md
.github/workflows/: ci.yml
deploy/: env.production.example
deploy/systemd/: signal-track-daily.service  signal-track-daily.timer  signal-track.service
docs/: RUNBOOK.md  个股分析-胡猛的3C-5M-3D-3T投资框架.md  完成审计.md  开发计划.md  数据架构.md  演示管理接口.md  自动化.md  行情CSV导入.md  需求.md
examples/: cu-bars.csv
reports/: project-1-report.md  project-2-report.md  project-3-report.md  project-4-report.md  project-5-report.md  project-6-report.md
scripts/: healthcheck.py  install_service.sh
src/signal_track/: __init__.py  analytics.py  checker.py  cli.py  config.py  daily_evaluator.py  dashboard.py  db.py  exit_signals.py  extraction.py  input_files.py  input_summary.py  instrument_master.py  logic_supplement.py  market_data.py  market_smoke.py  models.py  project_actions.py  project_report.py  project_summary.py  provider_diagnostics.py  publisher.py  resolver.py  rules.py  scheduler.py  signals.py  source_detection.py  web_app.py  web_inbox.py
src/signal_track/providers/: __init__.py  auto.py  base.py  eastmoney_fund_provider.py  factory.py  fixture.py  tushare_provider.py  yfinance_provider.py
tests/: test_core.py
