[project]
name = "signal-track"
version = "0.1.0"
description = "Private investment signal tracking toolkit."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
market = [
  "tushare>=1.4.24",
  "yfinance>=0.2.50",
]
files = [
  "pypdf>=5.0.0",
]

[project.scripts]
signal-track = "signal_track.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
